--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                             <p class="card-text">javascript</p>
                             <div class="d-flex flex-column">
                                 <a href="NumberGuessingGame/HW01-NumberGuessingGame.html"
-                                    class="btn btn-page m-2">here</a>
+                                    class="btn btn-page m-2">rotate</a>
+                                    <a href="NumberGuessingGame/NumberGuessingGame_Star.html"
+                                    class="btn btn-page m-2">星空版</a>
                             </div>
                         </div>
                     </div>
