--- a/TodoList-Vue/todoList_Vue.html
+++ b/TodoList-Vue/todoList_Vue.html
@@ -11,109 +11,119 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-</head>
-<style>
-    :root {
-        --bs-blue: #e29c76 !important;
-        --bs-primary: #e29c76 !important;
-        --bg-green: #53402a;
-        --bg-lightbg: #fdedce;
-        --text-gray: #5a5757;
-        --text-red: #ee977d;
+    <style>
+        :root {
+            --bs-blue: #e29c76 !important;
+            --bs-primary: #e29c76 !important;
+            --bg-green: #53402a;
+            --bg-lightbg: #fdedce;
+            --text-gray: #5a5757;
+            --text-red: #ee977d;
 
-    }
+        }
 
-    * {
-        list-style: none
-    }
+        * {
+            list-style: none
+        }
 
-    html,
-    body {
-        height: 100%;
-        /*高さを100%にして描画エリアをとる*/
-    }
+        html,
+        body {
+            height: 100%;
+            /*高さを100%にして描画エリアをとる*/
+        }
 
-    #particles-js {
-        position: fixed;
-        /*描画固定*/
-        z-index: -1;
-        /*描画を一番下に*/
-        width: 100%;
-        height: 100%;
-        background-color: #fff2f2;
-        /*背景色*/
-    }
+        #particles-js {
+            position: fixed;
+            /*描画固定*/
+            z-index: -1;
+            /*描画を一番下に*/
+            width: 100%;
+            height: 100%;
+            background-color: #fff2f2;
+            /*背景色*/
+        }
 
-    #wrapper {
-        position: relative;
+        #wrapper {
+            position: relative;
 
-        z-index: 1;
+            z-index: 1;
 
-        width: 100%;
-        height: 100%;
-    }
+            width: 100%;
+            height: 100%;
+        }
 
-    .form-check-input:checked {
-        background-color: #e29c76;
-        border-color: rgb(226, 156, 118);
-    }
+        .form-check-input:checked {
+            background-color: #e29c76;
+            border-color: rgb(226, 156, 118);
+        }
 
-    .form-check-input:focus {
-        border-color: #e29c76;
-        outline: 0;
-        box-shadow: 0 0 0 0.25rem rgba(226, 156, 118, .25);
-    }
+        .form-check-input:focus {
+            border-color: #e29c76;
+            outline: 0;
+            box-shadow: 0 0 0 0.25rem rgba(226, 156, 118, .25);
+        }
 
 
-    .btn-green {
-        background-color: #fff;
-        color: var(--bg-green);
-        border: 0.8px solid var(--text-gray);
-    }
+        .btn-green {
+            background-color: #fff;
+            color: var(--bg-green);
+            border: 0.8px solid var(--text-gray);
+        }
 
-    .btn-green:hover {
+        .btn-green:hover {
 
-        background-color: var(--bg-green);
-        color: #fff;
+            background-color: var(--bg-green);
+            color: #fff;
 
-    }
+        }
 
-    .btn-red {
-        color: var(--text-red);
-        background-color: #fff;
-        border: 0.7px solid var(--text-red);
-    }
+        .btn-red {
+            color: var(--text-red);
+            background-color: #fff;
+            border: 0.7px solid var(--text-red);
+        }
 
-    .btn-red:hover {
-        background-color: var(--text-red);
-        color: #fff;
-    }
+        .btn-red:hover {
+            background-color: var(--text-red);
+            color: #fff;
+        }
 
-    .bg-lightbg {
-        background-color: var(--bg-lightbg);
-        height: 100vh;
-    }
+        .bg-lightbg {
+            background-color: var(--bg-lightbg);
+            height: 100vh;
+        }
 
-    .bg-green {
-        background-color: var(--bg-green);
-        color: var(--text-gray);
-    }
+        .bg-green {
+            background-color: var(--bg-green);
+            color: var(--text-gray);
+        }
 
-    .text-gray {
-        color: var(--text-gray);
+        .text-gray {
+            color: var(--text-gray);
 
-    }
+        }
 
-    input {
+        input {
 
-        /* box-shadow: 0 0px 5px 0px var(--text-red); */
-        border: none;
-    }
+            /* box-shadow: 0 0px 5px 0px var(--text-red); */
+            border: none;
+        }
 
-    /* .bg-list {
+        /* .bg-list {
         background-color: var(--bg-green);
     } */
-</style>
+    </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EV2KLXRM9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0EV2KLXRM9');
+    </script>
+</head>
+
 
 <body>
 
@@ -183,7 +193,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
